Fix close modal button z-index

--- a/web/bootstrap/css/style-po-ups.css
+++ b/web/bootstrap/css/style-po-ups.css
@@ -243,4 +243,5 @@
 	line-height: 14px;
 	vertical-align: text-top;
 	background: url("/bootstrap/img/glyphicons-halflings.png") -48px -96px no-repeat;
+	z-index: 11;
 }
